@@ -3,7 +3,8 @@
 
 BZFlag 2.4.1
 ------------
-
+* Added an option to have both leading and lagging radar shot lines 
+    - David Anderson
 * Prevent prohibited solo bots from joining, rather than kick afterward
     - Scott Wichser, Jeff Makey
 * Add thiefControl plugin which prevents stealing flags from teammates
